<resources>
    <string name="app_name">CashierSystem</string>

    <!--Home Activity-->
    <string name="home_tab_cashier">收银台</string>
    <string name="home_tab_order">订单</string>
    <string name="home_tab_member">会员</string>
    <string name="home_tab_forms">报表</string>
    <string name="home_tab_setting">设置</string>

    <!--收银台-->
    <string name="cashier_order_detail">订单详情</string>
    <string name="cashier_order_num">订单号</string>
    <string name="cashier_order_member">会员 + </string>
    <string name="cashier_order_remark">备注 + </string>
    <string name="cashier_order_complete">马上结算</string>

    <!--结算对话框-->
    <string name="cashier_pay">结算</string>
    <string name="cashier_pay_sum">合计收款：</string>
    <string name="cashier_pay_num">订单号：</string>
    <string name="cashier_pay_remark">备注：</string>
    <string name="cashier_pay_type">支付方式</string>
    <string name="cashier_pay_type_cashier">现金</string>
    <string name="cashier_pay_type_zfb">支付宝</string>
    <string name="cashier_pay_type_wechat">微信</string>
    <string name="cashier_pay_type_card">会员卡</string>
    <string name="cashier_pay_type_other">其他</string>
    <string name="cashier_pay_ok">完成</string>


    <!--订单-->
    <string name="order_date_select">日期:</string>
    <string name="order_date_begin">从</string>
    <string name="order_date_end">至</string>
    <string name="order_date">日期</string>
    <string name="order_money">金额</string>

    <!--报表-->
    <string name="forms_cashier_summary">收银汇总</string>
    <string name="forms_operation_analysis">运营分析</string>
    <string name="forms_sales_rang">销售排行</string>

    <string name="forms_order_sum">订单总数</string>
    <string name="forms_total_business">营业总额</string>
    <string name="forms_cash_earnings">现金收入</string>
    <string name="forms_wehat_earnings">微信收入</string>
    <string name="forms_zfb_earnings">支付宝</string>
    <string name="forms_member_card">会员卡</string>

    <string name="forms_saleroom">销售额</string>
    <string name="forms_order_quantity">订单数</string>

    <string name="forms_goods_name">商品名称</string>
    <string name="forms_goods_sale_count">销售数量</string>
    <string name="forms_goods_sale_sum">销售额</string>


    <!--会员-->
    <string name="member_bug_record">消费记录</string>
    <string name="member_order_record">账单记录</string>
    <string name="member_pay_record">充值记录</string>
    <string name="member_buy_total">消费总额</string>
    <string name="member_pay_total">充值总额</string>

    <!--设置-->
    <string name="setting_cashier">收银设置：</string>
    <string name="setting_print">打印设置：</string>
    <string name="setting_upload_wechat_code">上传微信收款码</string>
    <string name="setting_upload_zfb_code">上传支付宝收款码</string>
    <string name="setting_print_connected">已连接的设备：</string>
    <string name="setting_print_search_device">搜索设备</string>
    <string name="setting_connected">已连接</string>
    <string name="setting_usable_device">已配对设备：</string>

    <!--common-->
    <string name="com_list_empty">空空如也！</string>
    <string name="com_search">搜索</string>
    <string name="dialog_ok">确定</string>
    <string name="dialog_cancel">取消</string>

</resources>
