<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:id="@+id/ll_order_item"
              android:layout_width="match_parent"
              android:layout_height="@dimen/cs_dp_48"
              android:orientation="horizontal">

    <TextView
        android:id="@+id/tv_order_date"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/order_date"/>

    <TextView
        android:id="@+id/tv_order_num"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/cashier_order_num"/>

    <TextView
        android:id="@+id/tv_order_amout"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/order_money"/>

    <TextView
        android:id="@+id/tv_order_member_name"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/cashier_order_member" />

    <TextView
        android:id="@+id/tv_order_remark"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/cashier_order_remark"/>
</LinearLayout>