<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/cs_dp_60"
        android:layout_gravity="top"
        android:gravity="center"
        android:text="@string/cashier_order_detail"
        android:textSize="20sp"
        android:textStyle="bold"/>
    <!--订单号-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/cs_dp_36"
        android:background="@color/gray_background"
        android:orientation="horizontal"
        android:paddingLeft="5dp"
        android:paddingRight="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/cashier_order_num"
            android:textColor="@android:color/black"
            android:textSize="14sp"/>

        <TextView
            android:id="@+id/tv_order_num"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="001"
            android:textColor="@android:color/black"
            android:textSize="14sp"/>

        <TextView
            android:id="@+id/tv_order_member"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="end|center_vertical"
            android:gravity="center_vertical"
            android:paddingRight="15dp"
            android:text="@string/cashier_order_member"
            android:textColor="@android:color/black"
            android:textSize="15sp"/>

        <TextView
            android:id="@+id/tv_order_remark"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="end|center_vertical"
            android:gravity="center_vertical"
            android:paddingRight="15dp"
            android:text="@string/cashier_order_remark"
            android:textColor="@android:color/black"
            android:textSize="15sp"/>
    </LinearLayout>

    <!--列表-->
    <android.support.v7.widget.RecyclerView
        android:id="@+id/order_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <!--底部订单处理按钮-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/cs_dp_48"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/order_commit_btn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/theme_red"
            android:gravity="center"
            android:text="@string/cashier_order_complete"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/order_cash_text"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@android:color/white"
            android:gravity="end|center_vertical"
            android:paddingRight="20dp"
            android:text="￥ 230"
            android:textColor="@color/theme_red"
            android:textSize="20sp"
            android:textStyle="bold"
            />

    </LinearLayout>

</LinearLayout>