<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="50dp"
    android:layout_marginTop="50dp">

    <TextView
        android:id="@+id/tv_cashier_pay_title"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/theme_red"
        android:gravity="center"
        android:text="@string/cashier_pay"
        android:textColor="@android:color/white"
        android:textSize="@dimen/cs_sp_20" />

    <LinearLayout
        android:id="@+id/cashier_pay_ll_one"
        android:layout_width="200dp"
        android:layout_height="match_parent"
        android:layout_below="@+id/tv_cashier_pay_title"
        android:background="@color/gray_head"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:id="@+id/tv_cashier_pay_order_num"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="center_vertical"
            android:text="订单号：234432" />

        <!--会员-->
        <TextView
            android:id="@+id/tv_cashier_pay_member"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="center_vertical"
            android:text="会员："
            android:visibility="gone" />

        <TextView
            android:id="@+id/tv_cashier_pay_remaining_money"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="center_vertical"
            android:text="会员余额：23443"
            android:visibility="gone" />

        <TextView
            android:id="@+id/tv_cashier_pay_sum"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="center_vertical"
            android:text="合计收款：123" />

        <TextView
            android:id="@+id/tv_cashier_pay_remark"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="center_vertical"
            android:text="备注：fdss" />

        <TextView
            android:id="@+id/tv_cashier_pay_type"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="center_vertical"
            android:text="@string/cashier_pay_type" />


        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp">

            <TextView
                android:id="@+id/tv_cashier_pay_cashier"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawablePadding="5dp"
                android:drawableTop="@mipmap/cashier_pay_cashier"
                android:padding="5dp"
                android:text="@string/cashier_pay_type_cashier"
                android:textSize="@dimen/cs_sp_12" />

            <TextView
                android:id="@+id/tv_cashier_pay_zfb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:drawablePadding="5dp"
                android:drawableTop="@mipmap/cashier_pay_zfb"
                android:padding="5dp"
                android:text="@string/cashier_pay_type_zfb"
                android:textSize="@dimen/cs_sp_12" />

            <TextView
                android:id="@+id/tv_cashier_pay_wechat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:drawablePadding="5dp"
                android:drawableTop="@mipmap/cashier_pay_wechat"
                android:padding="5dp"
                android:text="@string/cashier_pay_type_wechat"
                android:textSize="@dimen/cs_sp_12" />
        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:padding="5dp">

            <TextView
                android:id="@+id/tv_cashier_pay_card"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawablePadding="5dp"
                android:drawableTop="@mipmap/cashier_pay_card"
                android:padding="5dp"
                android:text="@string/cashier_pay_type_card"
                android:textSize="@dimen/cs_sp_12" />

            <TextView
                android:id="@+id/tv_cashier_pay_other"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:drawablePadding="5dp"
                android:drawableTop="@mipmap/cashier_pay_others"
                android:padding="5dp"
                android:text="@string/cashier_pay_type_other"
                android:textSize="@dimen/cs_sp_12" />
        </FrameLayout>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/tv_cashier_pay_title"
        android:layout_toRightOf="@+id/cashier_pay_ll_one"
        android:background="@color/gray_content">

        <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="支付宝"
            android:textSize="@dimen/cs_sp_18" />

        <TextView
            android:id="@+id/tv_cashier_pay_sum_money"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:clickable="false"
            android:hint="总额"
            android:padding="10dp"
            android:textSize="@dimen/cs_sp_18" />

        <com.juny.cashiersystem.widget.NumKeyBoardView
            android:id="@+id/keyboard_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_cashier_pay_sum_money" />

        <Button
            android:id="@+id/btn_cashier_pay_ok"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_alignParentBottom="true"
            android:background="@drawable/bg_cashier_pay_ok_btn"
            android:text="@string/cashier_pay_ok"
            android:textColor="@android:color/white"
            android:textStyle="bold" />
    </RelativeLayout>

</RelativeLayout>