<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="2"
    android:orientation="vertical">

    <!--日期范围-->
    <!--<com.juny.cashiersystem.widget.DateSelectView-->
        <!--android:id="@+id/dl_forms_date_view"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="@dimen/cs_dp_60"-->
        <!--android:layout_gravity="right"-->
        <!--android:layout_marginRight="@dimen/cs_dp_100"-->
        <!--android:orientation="horizontal"-->
        <!--/>-->

    <!--订单列表头-->
    <LinearLayout
        android:id="@+id/ll_table_tab"
        android:layout_width="match_parent"
        android:layout_height="@dimen/cs_dp_36"
        android:background="@color/light_them_red"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_forms_row_one"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/order_date"/>

        <TextView
            android:id="@+id/tv_forms_row_two"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/forms_saleroom"
            />

        <TextView
            android:id="@+id/tv_forms_row_three"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/forms_order_quantity"/>
    </LinearLayout>

    <!--订单列表-->
    <com.jude.easyrecyclerview.EasyRecyclerView
        android:id="@+id/rv_forms_analyze_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="36dp"
        app:layout_empty="@layout/common_empty_view"
        app:recyclerClipToPadding="true"
        app:scrollbarStyle="insideOverlay"/>
</FrameLayout>
